--- a/less/sysauth.less
+++ b/less/sysauth.less
@@ -88,7 +88,7 @@
 
         // Login form
         .login-form {
-            .absolute-full();
+            position: relative;
             display: flex;
             flex-direction: column;
             align-items: center;
